--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to RCafe</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+
+<%= link_to 'New Post', posts_path, class:'btn btn-default' %>
