--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,10 +3,12 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :content %>
+    <%= f.input :content, input_html: { rows: 10 } %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
+    <%= link_to 'Show', @post, class: 'btn btn-default' if @post.persisted? %>
+    <%= link_to 'List', posts_path, class: 'btn btn-default' %>
   </div>
 <% end %>
