--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,6 @@
     <tr>
       <th>Title</th>
       <th>Data Actions</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -15,10 +14,11 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post, class: 'btn btn-default' %></td>
-        <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %></td>
+        <td>
+          <%= link_to 'Show', post, class: 'btn btn-default' %>
+          <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %>
+          <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
