added gallery layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
             <li class="<%= params[:bulletin_id] == '1' ? 'active' : '' %>"><%= link_to 'Notice', bulletin_posts_path('1') %></li>
             <li class="<%= params[:bulletin_id] == '2' ? 'active' : '' %>"><%= link_to 'News', bulletin_posts_path('2') %></li>
             <li class="<%= params[:bulletin_id] == '3' ? 'active' : '' %>"><%= link_to 'Joining Greetings', bulletin_posts_path('3') %></li>
+            <li class="<%= params[:bulletin_id] == '4' ? 'active' : '' %>"><%= link_to 'Gallery', bulletin_posts_path(4) %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
