--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@ $navbar-default-link-hover-bg: black;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
 @import 'posts';
 
 body { padding-top: 60px; }
