--- a/app/views/posts/post_types/_blog.html.erb
+++ b/app/views/posts/post_types/_blog.html.erb
@@ -1,4 +1,4 @@
-<h2><%= bulletin_name params[:bulletin_id] %></h2>
+<h2><%= bulletin_name params[:bulletin_id] %> <small><%= link_to 'Setting', edit_bulletin_path(params[:bulletin_id])%></small></h2>
 
 <% @posts.each do | post | %>
     <div class='post'>
