--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,5 +26,6 @@ $navbar-default-link-hover-bg: black;
 @import "bootstrap";
 @import "font-awesome";
 @import 'posts';
+@import 'comments';
 
 body { padding-top: 60px; }
