--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
 
 
     <div class="container">
-
+      <!-- <%= render partial: "shared/flash_messages", flash: flash %> -->
+      <%= flash_messages(:close, :fade) %>
       <%= yield %>
 
     </div> <!-- /container -->
